--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,6 +101,16 @@
                       <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
                     <div class="method-list-content passed suite-Suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="com.obsqura.tests.CreateDeliveryBoy" class="method navigator-link" hash-for-method="CreateDeliveryBoyTest">CreateDeliveryBoyTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="com.obsqura.tests.CreateandDeleteExpense" class="method navigator-link" hash-for-method="MyCreateDeleteExpense">MyCreateDeleteExpense</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="com.obsqura.tests.LoginTest" class="method navigator-link" hash-for-method="MyLoginTest">MyLoginTest</a> <!-- method navigator-link -->
@@ -126,6 +136,21 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
+              <span class="class-name">com.obsqura.tests.CreateDeliveryBoy</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="CreateDeliveryBoyTest">
+                  </a> <!-- CreateDeliveryBoyTest -->
+                  <span class="method-name">CreateDeliveryBoyTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
               <span class="class-name">com.obsqura.tests.LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -134,6 +159,21 @@
                   <a name="MyLoginTest">
                   </a> <!-- MyLoginTest -->
                   <span class="method-name">MyLoginTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.obsqura.tests.CreateandDeleteExpense</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="MyCreateDeleteExpense">
+                  </a> <!-- MyCreateDeleteExpense -->
+                  <span class="method-name">MyCreateDeleteExpense</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -236,20 +276,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'MySearchProductTest')
-data.setCell(0, 2, 'com.obsqura.tests.SearchProductTest')
-data.setCell(0, 3, 6799);
+data.setCell(0, 1, 'MyCreateDeleteExpense')
+data.setCell(0, 2, 'com.obsqura.tests.CreateandDeleteExpense')
+data.setCell(0, 3, 5294);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'MyLoginTest')
-data.setCell(1, 2, 'com.obsqura.tests.LoginTest')
-data.setCell(1, 3, 3223);
+data.setCell(1, 1, 'CreateDeliveryBoyTest')
+data.setCell(1, 2, 'com.obsqura.tests.CreateDeliveryBoy')
+data.setCell(1, 3, 4291);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'MySearchProductTest')
+data.setCell(2, 2, 'com.obsqura.tests.SearchProductTest')
+data.setCell(2, 3, 3877);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'MyLoginTest')
+data.setCell(3, 2, 'com.obsqura.tests.LoginTest')
+data.setCell(3, 3, 1732);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 20 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -275,21 +323,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.obsqura.tests.LoginTest</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">InitializeDriver</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
               <div class="chronological-class-name">com.obsqura.tests.SearchProductTest</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">InitializeDriver</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.obsqura.tests.CreateDeliveryBoy</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">InitializeDriver</span>
                 <span class="method-start">0 ms</span>
@@ -299,6 +333,20 @@ return data;
               <div class="chronological-class-name">com.obsqura.tests.CreateandDeleteExpense</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">InitializeDriver</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-method before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.obsqura.tests.LoginTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">InitializeDriver</span>
+                <span class="method-start">1 ms</span>
+              </div> <!-- configuration-method before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.obsqura.tests.CreateDeliveryBoy</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">InitializeDriver</span>
                 <span class="method-start">1 ms</span>
               </div> <!-- configuration-method before -->
             </div> <!-- chronological-class -->
@@ -306,28 +354,56 @@ return data;
               <div class="chronological-class-name">com.obsqura.tests.LoginTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">MyLoginTest</span>
-                <span class="method-start">12413 ms</span>
+                <span class="method-start">8754 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.obsqura.tests.CreateDeliveryBoy</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">CreateDeliveryBoyTest</span>
+                <span class="method-start">9300 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.obsqura.tests.CreateandDeleteExpense</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">MyCreateDeleteExpense</span>
+                <span class="method-start">9323 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.obsqura.tests.SearchProductTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">MySearchProductTest</span>
-                <span class="method-start">12875 ms</span>
+                <span class="method-start">9347 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.obsqura.tests.LoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-method after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">15682 ms</span>
+                <span class="method-start">10513 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.obsqura.tests.SearchProductTest</div> <!-- chronological-class-name -->
               <div class="configuration-method after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">19680 ms</span>
+                <span class="method-start">13229 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.obsqura.tests.CreateDeliveryBoy</div> <!-- chronological-class-name -->
+              <div class="configuration-method after">
+                <span class="method-name">TearDown</span>
+                <span class="method-start">13594 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.obsqura.tests.CreateandDeleteExpense</div> <!-- chronological-class-name -->
+              <div class="configuration-method after">
+                <span class="method-name">TearDown</span>
+                <span class="method-start">14618 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
