--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,20 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f4d588">  <td>23/09/01 21:04:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.InitializeDriver()[pri:0, instance:com.obsqura.tests.LoginTest@6cd24612]">&gt;&gt;InitializeDriver</td> 
+<tr bgcolor="618ab1">  <td>23/09/06 23:26:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateDeliveryBoy.CreateDeliveryBoyTest()[pri:0, instance:com.obsqura.tests.CreateDeliveryBoy@2c78324b]">CreateDeliveryBoyTest</td> 
+  <td>TestNG-tests-3@38544126</td>   <td></td> </tr>
+<tr bgcolor="f4d588">  <td>23/09/06 23:25:53</td>   <td>-9292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.InitializeDriver()[pri:0, instance:com.obsqura.tests.LoginTest@6cd24612]">&gt;&gt;InitializeDriver</td> 
 <td>&nbsp;</td>  <td>TestNG-tests-1@2031951755</td>   <td></td> </tr>
-<tr bgcolor="f4d588">  <td>23/09/01 21:04:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.InitializeDriver()[pri:0, instance:com.obsqura.tests.SearchProductTest@22f59fa]">&gt;&gt;InitializeDriver</td> 
+<tr bgcolor="f4d588">  <td>23/09/06 23:25:53</td>   <td>-9292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.InitializeDriver()[pri:0, instance:com.obsqura.tests.SearchProductTest@22f59fa]">&gt;&gt;InitializeDriver</td> 
 <td>&nbsp;</td>  <td>TestNG-tests-2@351417028</td>   <td></td> </tr>
-<tr bgcolor="f4d588">  <td>23/09/01 21:04:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.InitializeDriver()[pri:0, instance:com.obsqura.tests.CreateDeliveryBoy@2c78324b]">&gt;&gt;InitializeDriver</td> 
+<tr bgcolor="f4d588">  <td>23/09/06 23:25:53</td>   <td>-9292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.InitializeDriver()[pri:0, instance:com.obsqura.tests.CreateDeliveryBoy@2c78324b]">&gt;&gt;InitializeDriver</td> 
 <td>&nbsp;</td>  <td>TestNG-tests-3@38544126</td>   <td></td> </tr>
-<tr bgcolor="f4d588">  <td>23/09/01 21:04:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.InitializeDriver()[pri:0, instance:com.obsqura.tests.CreateandDeleteExpense@5852c06f]">&gt;&gt;InitializeDriver</td> 
+<tr bgcolor="f4d588">  <td>23/09/06 23:25:53</td>   <td>-9292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.InitializeDriver()[pri:0, instance:com.obsqura.tests.CreateandDeleteExpense@5852c06f]">&gt;&gt;InitializeDriver</td> 
 <td>&nbsp;</td>  <td>TestNG-tests-4@215082566</td>   <td></td> </tr>
-<tr bgcolor="a987b8">  <td>23/09/01 21:04:48</td>   <td>12394</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.MyLoginTest()[pri:0, instance:com.obsqura.tests.LoginTest@6cd24612]">MyLoginTest</td> 
+<tr bgcolor="8d68ff">  <td>23/09/06 23:26:02</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateandDeleteExpense.MyCreateDeleteExpense()[pri:0, instance:com.obsqura.tests.CreateandDeleteExpense@5852c06f]">MyCreateDeleteExpense</td> 
+  <td>TestNG-tests-4@215082566</td>   <td></td> </tr>
+<tr bgcolor="a987b8">  <td>23/09/06 23:26:01</td>   <td>-546</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.MyLoginTest()[pri:0, instance:com.obsqura.tests.LoginTest@6cd24612]">MyLoginTest</td> 
   <td>TestNG-tests-1@2031951755</td>   <td></td> </tr>
-<tr bgcolor="c296f6">  <td>23/09/01 21:04:48</td>   <td>12855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchProductTest.MySearchProductTest()[pri:0, instance:com.obsqura.tests.SearchProductTest@22f59fa]">MySearchProductTest</td> 
+<tr bgcolor="c296f6">  <td>23/09/06 23:26:02</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchProductTest.MySearchProductTest()[pri:0, instance:com.obsqura.tests.SearchProductTest@22f59fa]">MySearchProductTest</td> 
   <td>TestNG-tests-2@351417028</td>   <td></td> </tr>
-<tr bgcolor="f4d588">  <td>23/09/01 21:04:51</td>   <td>15667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.TearDown()[pri:0, instance:com.obsqura.tests.LoginTest@6cd24612]">&lt;&lt;TearDown</td> 
+<tr bgcolor="f4d588">  <td>23/09/06 23:26:03</td>   <td>1213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.TearDown()[pri:0, instance:com.obsqura.tests.LoginTest@6cd24612]">&lt;&lt;TearDown</td> 
 <td>&nbsp;</td>  <td>TestNG-tests-1@2031951755</td>   <td></td> </tr>
-<tr bgcolor="f4d588">  <td>23/09/01 21:04:55</td>   <td>19662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.TearDown()[pri:0, instance:com.obsqura.tests.SearchProductTest@22f59fa]">&lt;&lt;TearDown</td> 
+<tr bgcolor="f4d588">  <td>23/09/06 23:26:06</td>   <td>3930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.TearDown()[pri:0, instance:com.obsqura.tests.SearchProductTest@22f59fa]">&lt;&lt;TearDown</td> 
 <td>&nbsp;</td>  <td>TestNG-tests-2@351417028</td>   <td></td> </tr>
+<tr bgcolor="f4d588">  <td>23/09/06 23:26:06</td>   <td>4295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.TearDown()[pri:0, instance:com.obsqura.tests.CreateDeliveryBoy@2c78324b]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-3@38544126</td>   <td></td> </tr>
+<tr bgcolor="f4d588">  <td>23/09/06 23:26:07</td>   <td>5318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.TearDown()[pri:0, instance:com.obsqura.tests.CreateandDeleteExpense@5852c06f]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-4@215082566</td>   <td></td> </tr>
 </table>
