Second Commit on 6th sep

--- a/Reports/index.html
+++ b/Reports/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Obsqura Automation Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sept 6, 2023 11:26:33 pm</span></a>
+<a href="#"><span class="badge badge-primary">Sept 6, 2023 11:49:18 pm</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">CreateDeliveryBoyTest</p>
+            <p class="name">MySearchProductTest</p>
             <p class="text-sm">
-              <span>11:26:40 pm</span> / <span>00:00:00:000</span>
+              <span>11:49:24 pm</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,9 +89,9 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">CreateDeliveryBoyTest</h5>
-<span class='badge badge-success'>09.06.2023 11:26:40 pm</span>
-<span class='badge badge-danger'>09.06.2023 11:26:40 pm</span>
+<h5 class="test-status text-pass">MySearchProductTest</h5>
+<span class='badge badge-success'>09.06.2023 11:49:24 pm</span>
+<span class='badge badge-danger'>09.06.2023 11:49:24 pm</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
@@ -107,7 +107,7 @@
           <div class="test-detail">
             <p class="name">MyLoginTest</p>
             <p class="text-sm">
-              <span>11:26:40 pm</span> / <span>00:00:00:000</span>
+              <span>11:49:24 pm</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -116,8 +116,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">MyLoginTest</h5>
-<span class='badge badge-success'>09.06.2023 11:26:40 pm</span>
-<span class='badge badge-danger'>09.06.2023 11:26:40 pm</span>
+<span class='badge badge-success'>09.06.2023 11:49:24 pm</span>
+<span class='badge badge-danger'>09.06.2023 11:49:24 pm</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
@@ -131,9 +131,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">MyCreateDeleteExpense</p>
+            <p class="name">CreateDeliveryBoyTest</p>
             <p class="text-sm">
-              <span>11:26:40 pm</span> / <span>00:00:00:000</span>
+              <span>11:49:24 pm</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -141,9 +141,9 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">MyCreateDeleteExpense</h5>
-<span class='badge badge-success'>09.06.2023 11:26:40 pm</span>
-<span class='badge badge-danger'>09.06.2023 11:26:40 pm</span>
+<h5 class="test-status text-pass">CreateDeliveryBoyTest</h5>
+<span class='badge badge-success'>09.06.2023 11:49:24 pm</span>
+<span class='badge badge-danger'>09.06.2023 11:49:24 pm</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
@@ -157,9 +157,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">MySearchProductTest</p>
+            <p class="name">MyCreateDeleteExpense</p>
             <p class="text-sm">
-              <span>11:26:40 pm</span> / <span>00:00:05:161</span>
+              <span>11:49:24 pm</span> / <span>00:00:04:778</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -167,10 +167,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">MySearchProductTest</h5>
-<span class='badge badge-success'>09.06.2023 11:26:40 pm</span>
-<span class='badge badge-danger'>09.06.2023 11:26:45 pm</span>
-<span class='badge badge-default'>00:00:05:161</span>
+<h5 class="test-status text-pass">MyCreateDeleteExpense</h5>
+<span class='badge badge-success'>09.06.2023 11:49:24 pm</span>
+<span class='badge badge-danger'>09.06.2023 11:49:29 pm</span>
+<span class='badge badge-default'>00:00:04:778</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -182,28 +182,28 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:26:42 pm</td>
+        <td>11:49:25 pm</td>
         <td>
           Test Passed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:26:44 pm</td>
+        <td>11:49:28 pm</td>
         <td>
           Test Passed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:26:45 pm</td>
+        <td>11:49:28 pm</td>
         <td>
           Test Passed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:26:45 pm</td>
+        <td>11:49:29 pm</td>
         <td>
           Test Passed
         </td>
@@ -227,13 +227,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sept 6, 2023 11:26:33 pm</h3>
+<h3>Sept 6, 2023 11:49:18 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sept 6, 2023 11:26:46 pm</h3>
+<h3>Sept 6, 2023 11:49:29 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -303,7 +303,7 @@
 </div></div>
 <script>
 var timeline = {
-"CreateDeliveryBoyTest":0,"MyLoginTest":0,"MyCreateDeleteExpense":0,"MySearchProductTest":5.161
+"MySearchProductTest":0,"MyLoginTest":0,"CreateDeliveryBoyTest":0,"MyCreateDeleteExpense":4.778
 };
 </script>
 <div class="row">
